[tool.poetry]
# Use Poetry only for dependency management, not for developing a Python package.
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
mkdocs-material = "~9.5.2"
mkdocs-table-reader-plugin = "~2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
